# RustShield

./: .gitignore  README.md
agent/: AUTHORS  Cargo.toml  README.md  TODO
agent/src/: main.rs  network.rs  normalizer.rs  parsing.rs
agent/src/libs/: config.rs  func.rs  structures.rs
agent/src/libs/configs/: config.json
agent/src/libs/configs/logs_config/: access_config.json  apt_history_config.json  audit_config.json  (+8 more)
agent/src/watchers/: watcher_linux.rs  watcher_mac.rs
agent/tests/normalized_logs/: log-apt_history.json  log-mysql_error.json
serveur/: Cargo.toml  README.md  TODO
serveur/src/: alert_manager.rs  analyzer.rs  main.rs  receiver.rs  rule_matcher.rs
serveur/src/libs/: config.rs  structures.rs
serveur/src/libs/configs/: config.json
serveur/tests/normalized_logs/: log-access.json  log-mysql_error.json
serveur/tests/rules/: BAD-IP-destination.yml  BAD-IP-source.yml  Irregular Firewall Rule Changes.yml  Linux Crypto Mining Pool Connections.yml  Linux Doas Conf File Creation.yml  Loading of Kernel Module via Insmod.yml  Network Sniffing 1.yml  Network Sniffing 2.yml  Persistence Via Cron Files.yml  Persistence Via Sudoers Files.yml  Potentially Suspicious Shell Script Creation in Profile Folder.yml  Suspicious Cron Job Creation or Modification.yml  System Time Alterations.yml  Triple Cross eBPF Rootkit Default LockFile.yml  Triple Cross eBPF Rootkit Default Persistence copy.yml  Unusual Network Interface Activation.yml  Wget Creating Files in Tmp Directory copy.yml  bypass-uac.yml
serveur/tests/rules/complex/: bitsadmin.yml  secu.yml
