[package]
name = "agent"
version = "0.2.0"
edition = "2021"
authors = [
    "Thomas BOISSON <thomas.boisson@epita.fr>",
    "Axel COCHEPIN <axel.cochepin@epita.fr>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
lazy_static = "1.4.0"
log = "0.4.20"
notify = "4.0.16"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
simple_logger = "4.3.3"
