[package]
name = "serveur"
version = "0.1.0"
edition = "2021"
authors = [
    "Thomas BOISSON <thomas.boisson@epita.fr>",
    "Axel COCHEPIN <axel.cochepin@epita.fr>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evalexpr = "11.3.0"
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
simple_logger = "4.3.3"
